# url-shortener-rs

./: .gitignore  Cargo.toml  urls.db-shm  urls.db-wal
migrations/: 20260131084445_create_urls_table.sql
src/: error.rs  main.rs
src/db/: mod.rs  urls.rs
src/handlers/: mod.rs  urls.rs
src/models/: urls.rs
