[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
nanoid = "0.4"
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0"
validator = { version = "0.19", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
] }
dotenv = "0.15.0"
